feat: 修改 post swagger 說明
