# models/users.js
@@ -17,6 +17,11 @@ const userSchema = new mongoose.Schema(
       type: String,
       default: ''
     },
+    createdAt:{
+      type: Date,
+      default: Date.now,
+      select: false
+    },
   },
   {
     versionKey: false
